Add files to deploy microservice in production environment.

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,7 @@
+APP_ENV=development
 HOST=0.0.0.0
 PORT=8080
 MONGODB_HOST=127.0.0.1
 MONGODB_PORT=27017
+MONGODB_USER=user
+MONGODB_PASSWORD=secret
